# pr-action-tests

./: .gitmodules  .pre-commit-config.yaml  404.html  MANIFEST.in  index.html  pyproject.toml
.github/workflows/: code_coverage.yaml
chrome-extension/: index.html
chrome-extension/data_privacy/: index.html
chrome-extension/features/: index.html
core-abilities/: index.html
core-abilities/code_oriented_yaml/: index.html
core-abilities/compression_strategy/: index.html
core-abilities/dynamic_context/: index.html
core-abilities/impact_evaluation/: index.html
core-abilities/interactivity/: index.html
core-abilities/metadata/: index.html
core-abilities/self_reflection/: index.html
core-abilities/static_code_analysis/: index.html
faq/: index.html
finetuning_benchmark/: index.html
installation/: index.html
installation/azure/: index.html
installation/bitbucket/: index.html
installation/github/: index.html
installation/gitlab/: index.html
installation/locally/: index.html
installation/pr_action_pro/: index.html
languages/: languages.c
overview/: index.html
overview/data_privacy/: index.html
overview/pr_action_pro/: index.html
pr_action/: cli_pip.py
pr_action/algo/: pr_processing.py
pr_action/tools/: pr_reviewer.py
samples/inputs/: sample_001.py  sample_003.js
samples/outputs/: sample_003.json
scripts/: build_alpine_arm.sh  build_linux_arm.sh
search/: search_index.json
tools/: index.html
tools/analyze/: index.html
tools/ask/: index.html
tools/ci_feedback/: index.html
tools/custom_labels/: index.html
tools/custom_prompt/: index.html
tools/describe/: index.html
tools/documentation/: index.html
tools/help/: index.html
tools/improve/: index.html
tools/improve_component/: index.html
tools/review/: index.html
tools/similar_code/: index.html
tools/similar_issues/: index.html
tools/test/: index.html
tools/update_changelog/: index.html
usage-guide/: index.html
usage-guide/EXAMPLE_BEST_PRACTICE/: index.html
usage-guide/PR_action_pro_models/: index.html
usage-guide/additional_configurations/: index.html
usage-guide/automations_and_usage/: index.html
usage-guide/changing_a_model/: index.html
usage-guide/configuration_options/: index.html
usage-guide/introduction/: index.html
usage-guide/mail_notifications/: index.html
